[gd_scene load_steps=16 format=3 uid="uid://dfa3dn75qvqpn"]

[ext_resource type="Script" uid="uid://chm30gbe4og0n" path="res://world/buildings/Laser.gd" id="1_6q26n"]
[ext_resource type="Material" uid="uid://dhghfth6r7t5c" path="res://materials/LaserBarrelMaterial.tres" id="2_megj0"]
[ext_resource type="PhysicsMaterial" uid="uid://cxmvb6atqbyf0" path="res://materials/physics/DefaultPhysics.tres" id="3_mxbe4"]
[ext_resource type="PackedScene" uid="uid://bv5vo4rgym2a7" path="res://components/LaserPointer.tscn" id="4_hjr40"]
[ext_resource type="Shader" uid="uid://b7lpd6h1smubj" path="res://materials/visual/CircleMatVis.tres" id="7_4njab"]
[ext_resource type="PackedScene" uid="uid://bmyq0wms5x6rm" path="res://components/HalfCapsuleRounded.tscn" id="7_6q26n"]
[ext_resource type="Material" uid="uid://du8bjg8b10yx2" path="res://materials/TurretBaseMaterial.tres" id="8_2ild4"]
[ext_resource type="Material" uid="uid://cl1am5df8gk6t" path="res://materials/PoleBaseMaterial.tres" id="8_ky77y"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_w3f5i"]
radius = 0.3
height = 1.2
radial_segments = 24

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_iwplw"]
radius = 0.3
height = 1.2

[sub_resource type="CylinderShape3D" id="CylinderShape3D_vc5tq"]
radius = 1.0

[sub_resource type="CapsuleMesh" id="CapsuleMesh_km8to"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_iwplw"]
height = 1.0

[sub_resource type="PlaneMesh" id="PlaneMesh_kyse0"]
size = Vector2(0.1, 0.1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_6q26n"]
render_priority = 0
shader = ExtResource("7_4njab")
shader_parameter/Color = Color(1, 0, 0, 0.4627451)
shader_parameter/OuterRadius = 0.999999977648
shader_parameter/InnerRadius = 0.5

[node name="Laser" type="Node3D"]
script = ExtResource("1_6q26n")
metadata/_custom_type_script = "uid://bisy5vkf6ejho"

[node name="Target" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)

[node name="BarrelPivot" type="Node3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, -4.371139e-08, -1, 0, 1, -4.371139e-08, 0, 1.75, 0)

[node name="BarrelMesh" type="MeshInstance3D" parent="BarrelPivot"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, -4.371139e-08, -1, 0, 1, -4.371139e-08, 0, 0, 0.15)
mesh = SubResource("CapsuleMesh_w3f5i")
surface_material_override/0 = ExtResource("2_megj0")

[node name="AnimatableBody3D" type="AnimatableBody3D" parent="BarrelPivot"]
collision_layer = 4
collision_mask = 0
physics_material_override = ExtResource("3_mxbe4")

[node name="CollisionShape3D" type="CollisionShape3D" parent="BarrelPivot/AnimatableBody3D"]
transform = Transform3D(1, 0, 0, 0, -4.371139e-08, -1, 0, 1, -4.371139e-08, 0, 0, 0.15)
shape = SubResource("CapsuleShape3D_iwplw")

[node name="LaserPointer" parent="BarrelPivot" instance=ExtResource("4_hjr40")]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 6.556708e-08, -0.24684334)
radiusTip = 0.01
radiusBase = 0.04999999999999999

[node name="Sensor" type="Area3D" parent="."]
unique_name_in_owner = true
collision_layer = 0
collision_mask = 2
input_ray_pickable = false
monitorable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="Sensor"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CylinderShape3D_vc5tq")

[node name="Base" type="StaticBody3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
collision_layer = 4
collision_mask = 0
physics_material_override = ExtResource("3_mxbe4")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Base"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0)
visible = false
mesh = SubResource("CapsuleMesh_km8to")
surface_material_override/0 = ExtResource("8_2ild4")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Base"]
shape = SubResource("CylinderShape3D_iwplw")

[node name="LaserDot" type="MeshInstance3D" parent="."]
unique_name_in_owner = true
cast_shadow = 0
mesh = SubResource("PlaneMesh_kyse0")
surface_material_override/0 = SubResource("ShaderMaterial_6q26n")

[node name="HalfCapsuleRounded" parent="." instance=ExtResource("7_6q26n")]
roundRings = 3
material = ExtResource("8_ky77y")

[connection signal="body_entered" from="Sensor" to="." method="_on_sensor_body_entered"]
[connection signal="body_exited" from="Sensor" to="." method="_on_sensor_body_exited"]
